--- a/packages/stencil-library/src/components/dnn-select/dnn-select.scss
+++ b/packages/stencil-library/src/components/dnn-select/dnn-select.scss
@@ -48,6 +48,7 @@
     white-space: nowrap;
     max-width: 100%;
     border-radius: var(--control-radius);
+    font-size: 1rem;
   }
   select{
     border: none;
